[metadata]
name = psdb
version = 0.9.0
author = Terry Greeniaus
author_email = terrygreeniaus@gmail.com
description = Package for interfacing with ARM-compatible debug probes
long_description = file: README.txt
long_description_content_type = text/plain
keywords = stlink xds110 arm swd fus stm32 msp432
url = https://github.com/tgree/psdb
license = LGPLv2
license-file = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)

[options]
python_requires = >=3.0
packages =
    psdb
    psdb.block
    psdb.component
    psdb.cpus
    psdb.devices
    psdb.devices.core
    psdb.devices.msp432
    psdb.devices.stm32
    psdb.devices.stm32g0
    psdb.devices.stm32g4
    psdb.devices.stm32h7
    psdb.devices.stm32wb55
    psdb.devices.stm32wb55.ipc
    psdb.elf
    psdb.probes
    psdb.probes.stlink
    psdb.probes.xds110
    psdb.targets
    psdb.targets.msp432
    psdb.targets.stm32g0
    psdb.targets.stm32g4
    psdb.targets.stm32h7
    psdb.targets.stm32wb55
    psdb.util
install_requires =
    pyelftools
    pyusb
    tgcurses
