[metadata]
name = psdb
version = 1.0.3
author = Terry Greeniaus
author_email = terrygreeniaus@gmail.com
description = Package for interfacing with ARM-compatible debug probes
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = stlink xds110 arm swd fus stm32 msp432
url = https://github.com/tgree/psdb
license = LGPLv2
license_file = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)

[options]
python_requires = >=3.0
packages =
    psdb
    psdb.block
    psdb.component
    psdb.cpus
    psdb.devices
    psdb.devices.core
    psdb.devices.msp432
    psdb.devices.stm32
    psdb.devices.stm32g0
    psdb.devices.stm32g4
    psdb.devices.stm32h7
    psdb.devices.stm32u5
    psdb.devices.stm32wb55
    psdb.devices.stm32wb55.ipc
    psdb.elf
    psdb.hexfile
    psdb.inspect_tool
    psdb.probes
    psdb.probes.stlink
    psdb.probes.xds110
    psdb.probes.xtswd
    psdb.targets
    psdb.targets.msp432
    psdb.targets.stm32g0
    psdb.targets.stm32g4
    psdb.targets.stm32h7
    psdb.targets.stm32u5
    psdb.targets.stm32wb55
    psdb.util
install_requires =
    pyelftools
    pyusb
    tgcurses>=0.9.5

[options.entry_points]
console_scripts =
    psdb_core_tool = psdb.core_tool:_main
    psdb_dump_stats = psdb.dump_stats:_main
    psdb_flash_tool = psdb.flash_tool:_main
    psdb_fus_tool = psdb.fus_tool:_main
    psdb_gdb_tool = psdb.gdb_tool:_main
    psdb_inspect_tool = psdb.inspect_tool.inspect_tool:_main
    psdb_reg_dump_tool = psdb.reg_dump_tool:_main
    psdb_scan_tool = psdb.scan_tool:_main
    psdb_srst_tool = psdb.srst_tool:_main
    psdb_xtswd_imon_tool = psdb.probes.xtswd.imon:_main
    psdb_xtswd_plot_imon_tool = psdb.probes.xtswd.plot_imon:_main
